Melhorias de layout, cores e textos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:gravity="center"
-        android:text="Calculadora IMC"
+        android:text="@string/title_imc"
         android:textColor="@color/white"
         android:textSize="48sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,12 +24,14 @@
     <EditText
         android:id="@+id/edittext_weight"
         android:layout_width="0dp"
+        android:inputType="number"
+        android:importantForAutofill="no"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="64dp"
         android:layout_marginRight="16dp"
         android:backgroundTint="@color/white"
-        android:hint="Peso"
+        android:hint="@string/hint_weight"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="20sp"
@@ -41,9 +43,9 @@
         android:id="@+id/textview_label_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
-        android:text="Altura (cm)"
+        android:text="@string/label_height"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,7 +55,7 @@
         android:id="@+id/seekbar_height"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
         android:backgroundTint="@color/white"
@@ -94,7 +96,7 @@
         android:backgroundTint="#55BA05"
         android:paddingLeft="48dp"
         android:paddingRight="48dp"
-        android:text="Limpar"
+        android:text="@string/button_clear"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -108,7 +110,7 @@
         android:backgroundTint="#55BA05"
         android:paddingLeft="48dp"
         android:paddingRight="48dp"
-        android:text="Calcular"
+        android:text="@string/button_calculate"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/button_clear"
